--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,8 @@ a {
 .backdrop .modal-form {
     width: 528px; 
     height: 581px;
+    padding: 40px;
+
     border-radius: 4px;
     background-color: var(--primary-white-color);
     transition: transform ease-in  250ms;
@@ -237,7 +239,7 @@ a {
     transform: translateY(200px);
 }
 
-.backdrop .modal-button {
+.backdrop .modal-form .modal-button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -253,10 +255,122 @@ a {
     cursor: pointer;
 }
 
-.backdrop .modal-button .icon-close {
+.backdrop .modal-form .modal-button .icon-close {
     width: 11px;
     height: 11px;
 }
+
+.backdrop .modal-form .modal-button:hover,
+.backdrop .modal-form .modal-button:focus {
+    fill:var(--accent-color);
+}
+
+.backdrop .modal-form .modal-form_title {
+    color: var(--primary-black-color);
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+}
+
+.backdrop .modal-form .modal-form_label {
+    display: block;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.backdrop .modal-form .modal-form_label .modal-form_input {
+    display: block;
+    width: 448px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    padding: 12px 0px 12px 42px;
+    outline: none;
+}
+
+.backdrop .modal-form .modal-form_label .modal-form_input:focus,
+.backdrop .modal-form .modal-form_label .modal-form_input:hover {
+    border: 1px solid var(--accent-color);
+}
+
+.backdrop .modal-form .modal-form_label .modal-form_input:focus + .modal-form_icon,
+.backdrop .modal-form .modal-form_label .modal-form_input:hover + .modal-form_icon {
+    fill:var(--accent-color);
+}
+
+.backdrop .modal-form .modal-form_label .modal-form_icon {
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    fill: var(--primary-black-color);
+
+    top: 35px;
+    bottom: 14px;
+    left: 15px;
+}
+
+.backdrop .modal-form label .modal-form_comments {
+    display: block;
+    resize: none;
+    width: 448px;
+    height: 120px;
+    
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 16px;
+    outline: none;
+}
+
+.backdrop .modal-form .modal-form_checkoption {
+    display: block;
+    position: relative;
+    padding-left: 42px;
+    margin-top: 20px;
+}
+
+.backdrop .modal-form .modal-form_checkoption .modal-form_checkbox {
+    width: 1px;
+    height: 1px;
+    margin: -2px;
+    opacity: 0;
+}
+
+.backdrop .modal-form .modal-form_checkoption .modal-form_box {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 15px;
+    overflow: hidden;
+    border-radius: 2px;
+    background-color: var(--primary-white-color);
+    border: 2px solid var(--primary-black-color);
+   
+    top: 4px;
+    left: 16px;
+}
+
+.backdrop .modal-form .modal-form_checkoption .modal-form_checkbox:checked + .modal-form_box {
+    background-color: var(--accent-color);
+    border: 2px solid var(--accent-color);
+}
+
+.backdrop .modal-form .modal-form_checkoption .modal-form_box .modal-form_iconcheck {
+    width: 11px;
+    height: 8px;
+}
+
+.backdrop .modal-form .modal-form_button {
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
+    align-items: center;
+    left: 164px;
+}
+
 
 /* Hero Section */
 .hero-section {
@@ -564,9 +678,6 @@ footer {
     padding: 60px var(--container-padding);
 }
 
-footer .logo {
-    padding-left: 15px;
-}
 
 footer .container {
     display: flex;
@@ -575,9 +686,14 @@ footer .container {
     gap: 20px;
 }
 
+footer .container ul {
+    list-style: none;
+}
+
 footer .container address {
     display: flex;
     width: 230;
+    
 }
 
 footer .container address ul {
@@ -645,4 +761,35 @@ footer .container aside ul li a .icon {
 footer .container aside ul li:hover a,
 footer .container aside ul li a:focus {
     background-color: var(--accent-color);
+}
+
+footer .container p {
+    color: var(--primary-white-color);
+    font-weight: 700;
+    line-height: 1.1;
+}
+
+footer .container form .footer-form_label {
+    display: block;
+    padding-top: 20px;
+}
+
+footer .container form .footer-form_label .footer-form_input {
+    width: 358px;
+    height: 50px;
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: var(--background-black);
+    padding-left: 16px;
+    outline: none;
+}
+
+footer .container form .footer-form_label .footer-form_button {
+    height: 50px;
+    margin-left: 12px;
+}
+
+footer .container form .footer-form_label .footer-form_button .footer-form_icon {
+    width: 24px;
+    height: 24px;
 }
