--- a/css/styles.css
+++ b/css/styles.css
@@ -30,23 +30,23 @@ body {
     line-height: 1.7;
 }
 
-.button-primary {
+.hero__button {
+    padding: 10px 32px;
+
     background-color: var(--accent-color);
+    border: none;
+    border-radius: 4px;
     color: var(--primary-white-color);
+    cursor: pointer;
     font-size: 16px;
     font-weight: 700;
     letter-spacing: 0.06em;
     line-height: 1.9;
-    
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
     outline: none;
-    padding: 10px 32px;
 }
 
-.button-primary:hover,
-.button-primary:focus {
+.hero__button:hover,
+.hero__button:focus {
     background-color: var(--button-primary-hover);
 }
 
@@ -60,7 +60,7 @@ body {
     padding: 30px 0;
 }
 
-.section > h2 {
+h2 {
     color: var(--primary-black-color);
     font-size: 36px;
     font-weight: 700;
@@ -68,10 +68,6 @@ body {
 
     padding: 30px 0 55px;
     text-align: center;
-}
-
-.no-top-padding {
-    padding-top: 0;
 }
 
 a {
@@ -82,15 +78,17 @@ a {
 .header {
     border-bottom: 1px solid var(--border-color);
     height: 80px;
-    padding: 0 var(--container-padding);
+    
     margin: 0 auto;
+    padding: 0 var(--container-padding);
 }
 
 .header .container {
     align-items: center;
     display: flex;
-    height: 100%;
     justify-content: space-between;
+    
+    height: 100%;
 }
 
 .logo {
@@ -110,8 +108,9 @@ a {
 
 .navbar .navbar__list {
     display: flex;
-    list-style: none;
     gap: 80px;
+    
+    list-style: none;
 }
 
 .navbar .navbar__link {
@@ -126,21 +125,22 @@ a {
 }
 
 .navbar .navbar__link--current::after {
+    background-color: var(--accent-color);
+    border-radius: 2px;
     content: '';
     height: 4px;
+    width: 100%;
+    
     left: 0;
     position: absolute;
     top: 44px;
-    width: 100%;
-
-    background-color: var(--accent-color);
-    border-radius: 2px;
 }
 
 .contacts {
     display:flex;
-    list-style: none;
     gap: 80px;
+    
+    list-style: none;
 }
 
 .contacts .contacts__link {
@@ -184,17 +184,18 @@ a {
 
 /*--------------- Modal window ---------------*/
 .backdrop {
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
-    
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    left: 0;
     position: fixed;
     top: 0;
-    left: 0;
+    
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 100%;
     opacity: 1;
+    width: 100%;
+    
     transition: opacity 250ms; 
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -204,203 +205,208 @@ a {
     pointer-events: none;
 }
 
-.backdrop .modal-form {
-    width: 528px; 
-    height: 581px;
-    padding: 40px;
-
+.backdrop .modal__form {
     border-radius: 4px;
     background-color: var(--primary-white-color);
+    height: 581px;
+    width: 528px; 
+    
     transition: transform ease-in  250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(0);
     
+    padding: 40px;
     position: relative;
     z-index: 1;
 }
 
-.backdrop .modal-form.is-hidden {
+.backdrop .modal__form.is-hidden {
     transform: translateY(200px);
 }
 
-.backdrop .modal-form .modal-button {
-    display: flex;
+.backdrop .modal__button {
     align-items: center;
+    display: flex;
     justify-content: center;
     position: absolute;
-    top: 8px;
     right: 8px;
-
-    width: 30px;
-    height: 30px;
+    top: 8px;
+    
     background-color: var(--primary-white-color);
-    border-radius: 25px;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 25px;
     cursor: pointer;
+    height: 30px;
+    width: 30px;
 }
+    
 
-.backdrop .modal-form .modal-button .icon-close {
-    width: 11px;
+.backdrop .modal__button .modal__button--close {
     height: 11px;
+    width: 11px;
 }
 
-.backdrop .modal-form .modal-button:hover,
-.backdrop .modal-form .modal-button:focus {
+.backdrop .modal__button:hover,
+.backdrop .modal__button:focus {
     fill:var(--accent-color);
 }
 
-.backdrop .modal-form .modal-form_title {
+.backdrop .modal__title {
     color: var(--primary-black-color);
-    font-weight: 700;
     font-size: 20px;
+    font-weight: 700;
     line-height: 1.2;
     text-align: center;
 }
 
-.backdrop .modal-form .modal-form_label {
+.backdrop .modal__label {
     display: block;
     position: relative;
     margin-bottom: 10px;
 }
 
-.backdrop .modal-form .modal-form_label .modal-form_input {
+.backdrop .modal__input {
     display: block;
-    width: 448px;
-    height: 40px;
-    border-radius: 4px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
     padding: 12px 0px 12px 42px;
-    outline: none;
-}
-
-.backdrop .modal-form .modal-form_label .modal-form_input:focus,
-.backdrop .modal-form .modal-form_label .modal-form_input:hover {
-    border: 1px solid var(--accent-color);
-}
-
-.backdrop .modal-form .modal-form_label .modal-form_input:focus + .modal-form_icon,
-.backdrop .modal-form .modal-form_label .modal-form_input:hover + .modal-form_icon {
-    fill:var(--accent-color);
-}
-
-.backdrop .modal-form .modal-form_label .modal-form_icon {
-    width: 18px;
-    height: 18px;
-    position: absolute;
-    fill: var(--primary-black-color);
-
-    top: 35px;
-    bottom: 14px;
-    left: 15px;
-}
-
-.backdrop .modal-form label .modal-form_comments {
-    display: block;
-    resize: none;
-    width: 448px;
-    height: 120px;
     
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    padding: 12px 16px;
+    height: 40px;
+    width: 448px;
     outline: none;
 }
 
-.backdrop .modal-form .modal-form_checkoption {
+.backdrop .modal__input:focus,
+.backdrop .modal__input:hover {
+    border: 1px solid var(--accent-color);
+}
+
+.backdrop .modal__input:focus + .modal__icon,
+.backdrop .modal__input:hover + .modal__icon {
+    fill:var(--accent-color);
+}
+
+.backdrop .modal__icon {
+    height: 18px;
+    width: 18px;
+    fill: var(--primary-black-color);
+    
+    bottom: 14px;
+    left: 15px;
+    position: absolute;
+    top: 35px;
+}
+
+.backdrop .modal__comments {
     display: block;
-    position: relative;
+    padding: 12px 16px;
+    
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    height: 120px;
+    outline: none;
+    resize: none;
+    width: 448px;
+}
+
+.backdrop .modal__label--checkoption {
+    display: block;
     padding-left: 20px;
+    position: relative;
     margin-top: 20px;
 }
 
-.backdrop .modal-form .modal-form_checkoption .modal-form_checkbox {
+.backdrop .modal__input--checkbox {
     opacity: 0;
 }
 
-.backdrop .modal-form .modal-form_checkoption .modal-form_box {
-    position: absolute;
-    display: flex;
+.backdrop .modal__box {
     align-items: center;
+    display: flex;
     justify-content: center;
-    width: 16px;
-    height: 15px;
-    overflow: hidden;
-    border-radius: 2px;
+    left: 16px;
+    position: absolute;
+    top: 4px;
+    
     background-color: var(--primary-white-color);
     border: 2px solid var(--primary-black-color);
-   
-    top: 4px;
-    left: 16px;
+    border-radius: 2px;
+    height: 15px;
+    overflow: hidden;
+    width: 16px;
 }
 
-.backdrop .modal-form .modal-form_checkoption .modal-form_checkbox:checked + .modal-form_box {
+.backdrop .modal__input--checkbox:checked + .modal__box {
     background-color: var(--accent-color);
     border: 2px solid var(--accent-color);
 }
 
-.backdrop .modal-form .modal-form_checkoption .modal-form_box .modal-form_iconcheck {
-    width: 11px;
+.backdrop .modal__iconcheck {
     height: 8px;
+    width: 11px;
 }
 
-.backdrop .modal-form .modal-form_button {
-    position: absolute;
-    width: 200px;
-    height: 50px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
-    align-items: center;
+.backdrop .modal__button--submit {
     left: 164px;
+    position: absolute;
+    
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
+    height: 50px;
+    width: 200px;
 }
 
-
-/* Hero Section */
-.hero-section {
+/*--------------- Hero Section ---------------*/
+.hero {
+    padding: 200px var(--container-padding);
+    text-align: center;
+    
     background-image: linear-gradient(rgba(47,48,58,0.7),rgba(47,48,58,0.4)), url(../Images/hero1.jpg);
     background-size: cover;
-    padding: 200px var(--container-padding);
-
-    text-align: center;
 }
 
-.hero-section .hero-title {
-    color: var(--primary-white-color);
-    font-weight: 900;
-    font-size: 44px;
-    width: 650px;
+.hero .hero__title {
     margin: 30px auto;
+
+    color: var(--primary-white-color);
+    font-size: 44px;
+    font-weight: 900;
+    width: 650px;
 }
 
-/* Benefits section */
+/*--------------- Benefits section ---------------*/
 .benefits {
-    flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: space-between;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.benefits li {
+.benefits .benefits__list {
     list-style: none;
     width: 270px;
 }
 
-.benefits li .title {
+.benefits .benefits__item {
+    background-color: var(--background-gray);
+    border-radius: 4px;
+    
+    padding: 25px 100px;
+}
+
+.benefits .benefits__icon {
+    height: 70px;
+    width: 65px;
+} 
+.benefits .benefits__title {
     color: var(--primary-black-color);
 
     padding: 10px 0;
 }
 
-.benefits li div {
-    background-color: var(--background-gray);
-    border-radius: 4px;
-    padding: 25px 100px;
+/*--------------- What we do section ---------------*/
+.section__item {
+    padding-top: 0;
 }
-
-.benefits li div .icon-benefit {
-    width: 65px;
-    height: 70px;
-} 
-
-/* What we do section */
 .what-we-do-section .container ul {
     display: flex;
     align-items: center;
