--- a/css/styles.css
+++ b/css/styles.css
@@ -564,32 +564,32 @@ a {
 }
 
 /* Portfolio section */
-.portfolio {
-    display: flex;
+.portfolio__menu {
     align-items: center;
-    justify-content: center;
+    display: flex;
     gap: 8px;
+    justify-content: center;
     margin-bottom: 50px;
+    
     list-style: none;
 }
 
-.portfolio li button {
-    background-color: var(--background-gray);
-    color: var(--primary-black-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.6;
-
-    border: none;
-    outline: none;
-    border-radius: 4px;
+.portfolio__menu .portfolio__button {
     padding: 6px 25px;
+    
+    background-color: var(--background-gray);
+    border: none;
+    border-radius: 4px;
+    color: var(--primary-black-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.6;
+    outline: none;
 }
 
-.portfolio-section .menu .button-current:hover,
-.portfolio-section .menu .button-current:focus,
-.portfolio-section .menu .button:hover,
-.portfolio-section .menu .button:focus {
+.portfolio__menu .portfolio__button--current,
+.portfolio__menu .portfolio__button:hover,
+.portfolio__menu .portfolio__button:focus {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
