--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./utils/variables";
 @import "./components/header";
-@import "./components/navbar";
+@import "./components/modal-window";
 
 *{
     box-sizing: border-box;
