--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -13,6 +13,49 @@
     
     transition: opacity 250ms; 
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    .modal__form {
+        padding: 40px;
+        position: relative;
+        z-index: 1;
+    
+        border-radius: 4px;
+        background-color: $primary-white-color;
+        height: 581px;
+        width: 528px; 
+        
+        transition: transform ease-in  250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateY(0);
+    }
+    .modal__form.is-hidden {
+        transform: translateY(200px);
+    }
+    .modal__button {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        right: 8px;
+        top: 8px;
+        
+        background-color: $primary-white-color;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 25px;
+        cursor: pointer;
+        height: 30px;
+        width: 30px;
+
+        &--close {
+            height: 11px;
+            width: 11px;
+        }
+        
+        &:hover,
+        &:focus {
+            fill:$accent-color;
+        }
+    }
 }
 .backdrop.is-hidden {
     opacity: 0;
