--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,9 @@
 @import "./utils/variables";
 @import "./components/header";
 @import "./components/modal-window";
+@import "./components/hero";
+@import "./components/benefits";
+@import "./components/activities";
 
 *{
     box-sizing: border-box;
