--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -56,6 +56,102 @@
             fill:$accent-color;
         }
     }
+    .modal__title {
+        text-align: center;
+    
+        color: $primary-black-color;
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 1.2;
+    }
+    .modal__label {
+        display: block;
+        position: relative;
+        margin-bottom: 10px;
+    }
+    .modal__input {
+        display: block;
+        padding: 12px 0px 12px 42px;
+        
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        height: 40px;
+        width: 448px;
+        outline: none;
+
+        &:focus,
+        &:hover {
+            border: 1px solid $accent-color;
+        }
+        
+        &:focus + .modal__icon,
+        &:hover + .modal__icon {
+            fill:$accent-color;
+        }
+    }
+    .modal__icon {
+        bottom: 14px;
+        left: 15px;
+        position: absolute;
+        top: 35px;
+    
+        height: 18px;
+        width: 18px;
+        fill: $primary-black-color;
+    }
+    .modal__comments {
+        display: block;
+        padding: 12px 16px;
+        
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        height: 120px;
+        outline: none;
+        resize: none;
+        width: 448px;
+    }
+    .modal__label--checkoption {
+        display: block;
+        padding-left: 20px;
+        position: relative;
+        margin-top: 20px;
+    }
+    .modal__input--checkbox {
+        opacity: 0;
+
+        .modal__input--checkbox:checked + .modal__box {
+            background-color: $accent-color;
+            border: 2px solid $accent-color;
+        }   
+    }
+    .modal__box {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        left: 16px;
+        position: absolute;
+        top: 4px;
+        
+        background-color: $primary-white-color;
+        border: 2px solid $primary-black-color;
+        border-radius: 2px;
+        height: 15px;
+        overflow: hidden;
+        width: 16px;
+    }
+    
+    .modal__iconcheck {
+        height: 8px;
+        width: 11px;
+    }   
+    .modal__button--submit {
+        left: 164px;
+        position: absolute;
+        
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
+        height: 50px;
+        width: 200px;
+    }
 }
 .backdrop.is-hidden {
     opacity: 0;
