--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,8 @@
 @import "./components/hero";
 @import "./components/benefits";
 @import "./components/activities";
+@import "./components/team";
+@import "./components/socialmedia";
 
 *{
     box-sizing: border-box;
