--- a/sass/components/_activities.scss
+++ b/sass/components/_activities.scss
@@ -29,7 +29,7 @@
         text-align: center;
         
         background-color: rgba(47, 48, 58, 0.8);
-        color: var(--primary-white-color);
+        color: $primary-white-color;
         font-size: 14px;
         font-weight: 700;
         height: 70px;
