--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./components/activities";
 @import "./components/team";
 @import "./components/socialmedia";
+@import "./components/clients";
 
 *{
     box-sizing: border-box;
