--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import "./components/team";
 @import "./components/socialmedia";
 @import "./components/clients";
+@import "./components/portfolio-menu";
+@import "./components/portfolio-cards";
 
 *{
     box-sizing: border-box;
