--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,9 @@
 @import "./components/clients";
 @import "./components/portfolio-menu";
 @import "./components/portfolio-cards";
+@import "./components/footer";
+@import "./components/address";
+
 
 *{
     box-sizing: border-box;
