--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -6,9 +6,7 @@
     height: 80px;
 
     .container {
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
+        @include flex(center, space-between);
         
         height: 100%;
     }
