--- a/sass/components/_socialmedia.scss
+++ b/sass/components/_socialmedia.scss
@@ -1,23 +1,17 @@
 .socialMedia {
-    align-items: center;
-    display: flex; 
+    @include flex(center, center);
     gap: 15px;
-    justify-content:center;
     margin-bottom: 20px;
     padding-top: 20px;
 
     &__list {
-        display:block;
-        
         border-radius: 25px;
         box-shadow: none;
         height: 44px;
         width: 44px;
     }
     &__link {
-        align-items: center;
-        display: flex;
-        justify-content: center;
+        @include flex(center, center);
         
         border-radius: 25px;
         height: 44px;
